# pystematic

./: .gitignore  .readthedocs.yaml  LICENSE  README.rst  pyproject.toml
.github/workflows/: release.yaml  test.yaml
docs/source/: apidoc.rst  conf.py  extending.rst  index.rst  tutorial.rst
examples/: groups.py  hello_world.py  nested_groups.py  param_groups.py  simple.py  test_param_sweep.py
pystematic/: __init__.py  bounding_box.py  cli.py  cli_help_formatters.py  click_adapter.py  context.py  core.py  counter.py  help_formatters.py  internal.py  metrics.py  parametric.py  pluginapi.py  pytorch_api.py  pytorch_experiment_api.py  recording.py  torch_state.py  torchapi.py  torchutil.py  transforms.py  utils.py  yaml_stuff.py
pystematic/classic_plugin/: __init__.py  classic_plugin.py  yaml_wrapper.py
pystematic/standard_plugin/: standard_plugin.py
pystematic/torch_plugin/: __init__.py  context.py  recording.py  torch_plugin.py  torchapi.py  torchutil.py  utils.py
tests/: test_cli.py  test_core.py  test_parametric.py
tests/resources/: params1.yaml  params2.yaml
