[tool.poetry]
name = "pystematic"
version = "0.9.0"
description = "A framework that helps you setup and run reproducible experiments in python."
repository = "https://github.com/evalldor/pystematic"
documentation = "https://pystematic.readthedocs.io"
license = "MIT"
readme = "README.rst"
authors = ["E.Valldor"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Topic :: Scientific/Engineering"
]

[tool.poetry.dependencies]
python = "^3.6"
PyYAML = "^5.3.1"
wrapt = "^1.12.1"
rich = "^10.1.0"
importlib-metadata = "^4.6.4"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pylint = "^2.6.0"
sphinx-rtd-theme = "^0.5.2"
autopep8 = "^1.5.6"
Sphinx = "^4.1.2"
sphinxcontrib-napoleon = "^0.7"

[tool.poetry.plugins."pystematic.plugins"]
"pystematic-standard" = "pystematic.standard_plugin:StandardPlugin"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

