[tool.poetry]
name = "pystematic"
version = "1.7.0"
description = "A framework that helps you setup and run reproducible experiments in python."
repository = "https://github.com/evalldor/pystematic"
documentation = "https://pystematic.readthedocs.io"
license = "MIT"
readme = "README.rst"
authors = ["E.Valldor"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Topic :: Scientific/Engineering"
]

[tool.poetry.dependencies]
python = "^3.9"
PyYAML = "^6.0.2"
wrapt = "^1.17.2"
rich = "^14.0.0"
importlib-metadata = "^8.7.0"
typing-extensions = "^4.14.0"

[tool.poetry.dev-dependencies]
sphinx-rtd-theme = "^0.5.2"
Sphinx = "^4.1.2"
sphinxcontrib-napoleon = "^0.7"
pytest = "^6.2.4"
pytest-cov = "^2.12.1"

[tool.poetry.plugins."pystematic.plugins"]
"pystematic-standard" = "pystematic.standard_plugin:StandardPlugin"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

